<resources>
    <string name="app_name">SharedHouse</string>
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="permission_granted">All Permission Granted</string>
    <string name="permission_not_granted">Permission not granted! The Application may not work properly!</string>
    <string name="You_will_receive_an_email_with_instructions_on_resetting_password">You will receive an email with instructions on resetting password.</string>
    <string name="password_reset">Password reset</string>
    <string name="login">LogIn</string>
    <string name="join_us">Join us</string>
    <string name="create_new_house_in_db">Create new house \n in DB</string>
    <string name="enter_adress">Enter Adress</string>
    <string name="enter_city">Enter City</string>
    <string name="post_shared_house">Post shared house</string>
    <string name="update_shared_house">Update shared house</string>
    <string name="reset_password">Reset password</string>
    <string name="existing_houses">Existing houses</string>
    <string name="enter">Enter</string>
    <string name="update_mission">Update mission</string>
    <string name="delete_mission">Delete mission</string>
    <string name="post_mission">post mission</string>
    <string name="delete_shared_house">Delete shared house</string>
    <string name="sign_in_text_on_registration_activity">Sign in text on registration activity</string>
    <string name="logout">Logout</string>
    <string name="push_to_select">Push to select</string>
    <string name="submit">Submit</string>
    <string name="create_new_mission">Create new mission:</string>
    <string name="date_picker_for_mission">Date Picker for mission</string>
</resources>
