<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateNewSharedHouse">

    <LinearLayout
        android:id="@+id/create_house_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000300"/>
        <EditText
            android:id="@+id/enter_home_address"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/enter_adress"
            android:paddingBottom="30dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000300"/>

        <EditText
            android:id="@+id/enter_home_city"
            android:autofillHints=""
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city"
             />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000300"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#000300"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_post_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@mipmap/list_post" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/post_shared_house"
                    android:textSize="16dp"/>

            </LinearLayout>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#000300"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_delete_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@mipmap/list_delete" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/delete_shared_house"
                    android:textSize="16dp"/>

            </LinearLayout>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#000300"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btn_update_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@mipmap/list_edit"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/update_shared_house"
                    android:textSize="16dp"/>
            </LinearLayout>


            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#000300"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000300"/>
    </LinearLayout>
    <TextView
        android:id="@+id/empty_house_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ops there are no items"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_sharedHouse_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>