<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowAllMissionsActivity">

    <!--<LinearLayout-->
        <!--android:id="@+id/show_missions_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="#000300"/>-->
        <!--<EditText-->
            <!--android:id="@+id/enter_home_address"-->
            <!--android:layout_width="match_parent"-->
            <!--android:autofillHints=""-->
            <!--android:inputType="text"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/enter_adress"-->
            <!--android:paddingBottom="30dp" />-->
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="#000300"/>-->

        <!--<EditText-->
            <!--android:id="@+id/enter_home_city"-->
            <!--android:autofillHints=""-->
            <!--android:inputType="text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/enter_city"-->
            <!--/>-->
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="#000300"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageButton
                    android:id="@+id/btn_post_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/add_mission"
                    android:background="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_mission"
                    android:textSize="16dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/btn_update_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@mipmap/update_mission"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_mission"
                android:textSize="16dp"
                />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/btn_delete_mission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/remove_mission"
                    android:background="@color/white"
                    android:textSize="9dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_mission"
                    android:textSize="16dp"

                    />
            </LinearLayout>


        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"/>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/show_all_missions_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        />

</LinearLayout>